--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="product-info">
             <h1>{{ product }}</h1>
             <!-- solution -->
-            <a :href="url">Made by Vue Mastery</a>
+            <a :href="url">link to tutorial</a>
            <!-- solution -->
           </div>
         </div>
